# recipedj

./: .gitignore  index.html  pyproject.toml
.mypy_cache/: mypy.ini
.mypy_cache/3.11/: _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _winapi.data.json  _winapi.meta.json  abc.data.json  abc.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  dataclasses.data.json  dataclasses.meta.json  enum.data.json  enum.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  main.data.json  main.meta.json  manage.data.json  manage.meta.json  ntpath.data.json  ntpath.meta.json  pathlib.data.json  pathlib.meta.json  posixpath.data.json  posixpath.meta.json  re.data.json  re.meta.json  sre_compile.data.json  sre_compile.meta.json  sre_constants.data.json  sre_constants.meta.json  (+10 more)
.mypy_cache/3.11/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.11/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.11/email/: __init__.data.json  __init__.meta.json  _policybase.data.json  _policybase.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  (+1 more)
projeto_receita/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: views.py
(+28 files in other folders)
